Added basic migrations and basic tasks crud
